# sepgen

./: .gitignore  README.md  pyproject.toml  sepgen.1  sepgen.spec  setup.py
.github/workflows/: build-rpm.yml
completions/: sepgen.bash  sepgen.zsh
sepgen/: __init__.py  __main__.py  cli.py
sepgen/analyzer/: __init__.py  base.py  c_analyzer.py  cmake_parser.py  config_parser.py  dataflow.py  include_analyzer.py  makefile_parser.py  preprocessor.py  project_scanner.py  python_analyzer.py  service_detector.py  symbol_scanner.py  syscall_mapper.py
sepgen/generator/: __init__.py  fc_generator.py  fc_writer.py  te_generator.py  te_writer.py
sepgen/intent/: __init__.py  classifier.py  rules.py
sepgen/merger/: __init__.py  policy_merger.py
sepgen/models/: __init__.py  access.py  intent.py  policy.py
sepgen/refiner/: __init__.py  denial_reader.py  macro_suggester.py
sepgen/selinux/: __init__.py  macro_lookup.py  type_generator.py
sepgen/tracer/: __init__.py  process_tracer.py  strace_parser.py
tests/: test_cli.py  test_cli_trace.py
tests/analyzer/: test_bind_path_inference.py  test_c_analyzer.py  test_capability_detection.py  test_daemon_detection.py  test_define_resolution.py  test_directory_analysis.py  test_file_manipulation.py  test_include_analysis.py  test_makefile_parser.py  test_service_detection.py  test_signal_perms.py  test_socket_server_detection.py  test_socket_types.py  test_symbol_scanner.py  test_syscall_mapper.py  test_syslog_detection.py  test_variable_tracking.py
tests/fixtures/: sample_c_program.c  strace_chronyd_real.txt  (+5 more)
(+31 files in other folders)
