[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sepgen"
version = "0.1.0"
description = "SELinux policy generator with static analysis and runtime tracing"
authors = [{name = "Pranav Lawate"}]
requires-python = ">=3.9"
dependencies = [
    "semacro",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sepgen = "sepgen.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
